...
                android:layout_marginBottom="100dp"
                android:text="00:00"

                android:textSize="30dp" />

            <TextView
                android:id="@+id/data_distance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
...
            android:gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:visibility="invisible"
                android:id="@+id/btnEnd"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_stop_circle_24"

                ></ImageButton>
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/btnPause"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_pause_circle_filled_24"></ImageButton>
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/btnCountinue"
                android:visibility="invisible"
                android:background="@drawable/ic_baseline_play_circle_filled_24"
                ></ImageButton>
        </LinearLayout>

    </FrameLayout>
...
