...
        android:layout_marginBottom="16dp"
        />
    <EditText
        android:drawableLeft="@drawable/ic_user"
        android:backgroundTint="#9B9B9B"
        android:drawablePadding="10dp"
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/email"
        />
    <EditText
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="10dp"

        android:backgroundTint="#9B9B9B"
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="login"
            />
        <Button
...
