...
            android:textSize="15sp"
            android:text="Quãng đường"
            android:textColor="@color/black"
            android:fontFamily="@font/svn_avo" />

        <TextView
            android:id="@+id/km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:text="km"
            android:fontFamily="@font/svn_avo_bold"
...
            android:textSize="15sp"
            android:text="Tốc độ trung bình"
            android:textColor="@color/black"
            android:fontFamily="@font/svn_avo" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="80dp"
            android:layout_gravity="center"
            android:fontFamily="@font/svn_avo_bold"
            android:text="time"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pace"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="-30dp"
            android:layout_gravity="center"
            android:fontFamily="@font/svn_avo_bold"
...
