<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title=""
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:title=""
        android:id="@+id/userFragment"
        android:icon="@drawable/ic_user"/>

</menu>